[tool.poetry]
name = "cv-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cv_project"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
tqdm = "^4.66.1"
matplotlib = "^3.8.2"
torch = "^2.1.2"
torchvision = "^0.16.2"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
